# 31HW

./: pyproject.toml
ads/: admin.py  validators.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug_alter_ad_description_and_more.py  0004_alter_category_slug.py
ads/models/: ad.py  category.py
ads/permissions/: ad.py  selection.py
ads/serializers/: ad.py  selection.py
project/: settings.py  urls.py
tests/: conftest.py  fixtures.py  settings.py
tests/ads/: ad_create_test.py  ad_list_test.py  selection_create_test.py
tests/factories/: __init__.py  ad.py  category.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py
